syntax = "proto3";
package commerce;
option java_package = "com.ferza17.ecommercemicroservicesv2.proto.v1.commerce";

import "external/validate/validate.proto";

// CART ITEM REQUEST DEFINITION
message AddToCartRequest {
  string product_id = 1 [(validate.rules).string = {ignore_empty: false, min_len:1}];
  string user_id = 2 [(validate.rules).string = {ignore_empty: false, min_len:1}];
  int32 qty = 3 [(validate.rules).int32 = {ignore_empty: false, gt:0}];
  double price = 4 [(validate.rules).double = {ignore_empty: false, gt:0}];
}

message FindCartItemsWithPaginationRequest {
  string user_id = 1 [(validate.rules).string = {ignore_empty: false, min_len:1}];
  repeated string productIds = 2 [(validate.rules).repeated = {ignore_empty: true}];
  int32 page = 3;
  int32 limit = 4;
}

message DeleteCartItemByIdRequest {
  string id = 1;
}

// WISHLIST ITEM REQUEST DEFINITION
message AddToWishlistRequest {
  string product_id = 1;
  string user_id = 2;
}

message FindWishlistItemWithPaginationRequest {
  string user_id = 1;
  repeated string product_ids = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteWishlistItemByIdRequest {
  string id = 1;
}